gccida/c1/emit_conditional_move
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4133:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4136:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode cmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4139:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4144:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v13; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4149:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4150:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4151:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v20; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4163:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // [rsp+1Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4243:11: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
operand = insn_data_0[v34].operand; 
          ^~~~~~~~~~~
          insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4245:34: error: use of undeclared identifier 'machine_mode'
if ( !operand->predicate( v24, ( machine_mode)*( ( unsigned __int16 *)operand + 8)) ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4246:20: error: use of undeclared identifier 'machine_mode'
x = gen_reg_rtx( ( machine_mode)*( ( unsigned __int16 *)operand + 8)); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4247:36: error: use of undeclared identifier 'machine_mode'
if ( !operand[2].predicate( v25, ( machine_mode)*( ( unsigned __int16 *)&operand[2] + 8)) ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4248:21: error: use of undeclared identifier 'machine_mode'
copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&operand[2] + 8), v25); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4249:36: error: use of undeclared identifier 'machine_mode'
if ( !operand[3].predicate( v26, ( machine_mode)*( ( unsigned __int16 *)&operand[3] + 8)) ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4250:21: error: use of undeclared identifier 'machine_mode'
copy_to_mode_reg( ( machine_mode)*( ( unsigned __int16 *)&operand[3] + 8), v26); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4256:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v29 = insn_data_0[( int)v34].genfun( x, v28); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/optabs.c:4256:36: error: called object type '<dependent type>' is not a function or function pointer
v29 = insn_data_0[( int)v34].genfun( x, v28); 
                                   ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_conditional_move/src/obj/optabs.o] Error 1
